--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLibrary">
-        <activity android:name=".BookActivity"></activity>
+        <activity android:name=".favoriteBooksActivity"></activity>
+        <activity android:name=".currentlyReadingBooksActivity" />
+        <activity android:name=".WantToReadBookActivity" />
+        <activity android:name=".AlreadyReadBookActivity" />
+        <activity android:name=".BookActivity" />
         <activity android:name=".AllBooksActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
