--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,24 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/booka"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/booka"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLibrary">
         <activity android:name=".WebsiteActivity"></activity>
-        <activity android:name=".favoriteBooksActivity" />
-        <activity android:name=".currentlyReadingBooksActivity" />
-        <activity android:name=".WantToReadBookActivity" />
-        <activity android:name=".AlreadyReadBookActivity" />
-        <activity android:name=".BookActivity" />
-        <activity android:name=".AllBooksActivity" />
+        <activity android:name=".favoriteBooksActivity"
+            android:label="@string/favorite_book"/>
+        <activity android:name=".currentlyReadingBooksActivity"
+            android:label="@string/current_read"/>
+        <activity android:name=".WantToReadBookActivity"
+            android:label="@string/want_to_read"/>
+        <activity android:name=".AlreadyReadBookActivity"
+            android:label="@string/already_read"/>
+        <activity android:name=".BookActivity"
+            android:label="@string/book"/>
+        <activity android:name=".AllBooksActivity"
+            android:label="@string/all_books"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
